# bd2-ifba

./: README.md  docker-compose.yaml  pyproject.toml
bd2_ifba/: app.py
data/: data.csv  dump.sql  resultado.csv
tests/: test_bd2_ifba.py
