[tool.poetry]
name = "bd2-ifba"
version = "0.1.0"
description = ""
authors = ["caioreis123 <reis.caio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
